--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -73,6 +73,11 @@
                             <li>
                                 <a class="view-browser" href="{{this.post.url}}" target="_blank" rel="noopener noreferrer">View in browser</a>
                             </li>
+                            {{#if (and (gh-user-can-admin this.session.user) this.config.stats (feature "trafficAnalytics"))}}
+                                <li>
+                                    <LinkTo class="edit-post" @route="posts-x" @model={{this.post.id}}>Analytics Beta</LinkTo>
+                                </li>
+                            {{/if}}
                             <li>
                                 <button
                                     type="button"
