Added radial bar chart for opens

--- a/apps/shade/styles.css
+++ b/apps/shade/styles.css
@@ -55,6 +55,7 @@
         --chart-4: 201 82% 90%;
         --chart-5: 201 87% 94%;
         --chart-gray: 210 13% 88%;
+        --chart-darkgray: 210 13% 79%;
         --chart-blue: 198 100% 54%;
         --chart-green: 127 62% 50%;
         --chart-purple: 264 100% 63%;
