Implemented title font weight newsletter setting
ref https://linear.app/ghost/issue/PROD-1684

- copied UI for setting from prototype to alpha
- removed disabled state for the setting when post title section isn't shown because the setting impacts general headings rather than just the post title
- updated `EmailRenderer` to output two additional data properties, `titleWeight` and `titleStrongWeight` containing the desired CSS `font-weight` values based on the `newsletter.title_font_weight` value
- updated `styles.hbs` partial to use `{{titleWeight}}` and `{{titleStrongWeight}}` where appropriate

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -214,14 +214,13 @@ h6 {
     margin-top: 0;
     font-family: -apple-system, BlinkMacSystemFont, Roboto, Helvetica, Arial, sans-serif;
     line-height: 1.11em;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
     text-rendering: optimizeLegibility;
 }
 
 h1 {
     margin: 1.5em 0 0.5em 0;
     font-size: 42px;
-    font-weight: 700;
 }
 
 h2 {
@@ -250,7 +249,6 @@ h6 {
     margin: 2em 0 0.5em 0;
     font-size: 19px;
     line-height: 1.3em;
-    font-weight: 700;
 }
 
 h1 strong,
@@ -259,7 +257,7 @@ h3 strong,
 h4 strong,
 h5 strong,
 h6 strong {
-    font-weight: 800;
+    font-weight: {{titleStrongWeight}};
 }
 
 strong {
@@ -361,7 +359,7 @@ figure blockquote p {
 .post-title {
     font-size: 36px;
     line-height: 1.1em;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
     text-align: center;
 }
 
@@ -536,7 +534,7 @@ figure blockquote p {
     padding: 8px 0 8px;
     color: #15212A;
     font-size: 13px;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
     text-transform: uppercase;
 }
 
@@ -569,7 +567,7 @@ figure blockquote p {
     margin: 0;
     padding: 2px 0 4px;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
 }
 
 .latest-post h4.no-image {
@@ -1289,7 +1287,7 @@ img.kg-cta-image {
 {{#hasFeature "emailCustomizationAlpha"}}
 .kg-header-card h2 {
     font-size: 32px;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
     line-height: 1.1em;
     margin: 0 0 0.125em;
 }
@@ -1490,7 +1488,7 @@ img.kg-cta-image {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
     font-size: 22px !important;
-    font-weight: 700;
+    font-weight: {{titleWeight}};
 }
 
 .kg-product-rating {
