--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -661,7 +661,7 @@ figure blockquote p {
 .post-content a,
 .post-content-sans-serif a {
     color: {{accentColor}};
-    text-decoration: underline;
+    {{linkStyles}}
 }
 
 a[data-flickr-embed] img {
