Implemented image rounded corners
ref PROD-1725

- Updated the UI to take imageCorners props and preview them.
- Updated `emailRenderer` to get the `imageCorners` data and update the
  template.
- New styles are passed to `styles.hbs`.
- Added new tests

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -695,6 +695,7 @@ a[data-flickr-embed] img {
     margin: 0 auto;
     height: auto;
     width: auto;
+    {{imageCorners}};
 }
 
 .kg-image-card span {
