Added colors to growth charts

--- a/apps/shade/styles.css
+++ b/apps/shade/styles.css
@@ -60,6 +60,7 @@
         --chart-green: 127 62% 50%;
         --chart-purple: 264 100% 63%;
         --chart-pink: 332 96% 58%;
+        --chart-orange: 34 95% 50%;
         /* --chart-1: 221.2 83.2% 53.3%;
         --chart-2: 212 95% 68%;
         --chart-3: 216 92% 60%;
