Added pagination support to links endpoint
no ref

We are creating a new display on the beta post analytics overview page where we are only wanting to display the top links. Past that, we want to display all links. This didn't previously support a limit param.

--- a/ghost/admin/app/components/posts/analytics.hbs
+++ b/ghost/admin/app/components/posts/analytics.hbs
@@ -75,7 +75,7 @@
                             </li>
                             {{#if (and (gh-user-can-admin this.session.user) this.config.stats)}}
                                 <li>
-                                    <LinkTo class="edit-post" @route="posts-x" @model={{this.post.id}}>Switch to Ghost Analytics (beta)</LinkTo>
+                                    <LinkTo class="edit-post" @route="posts-x" @model={{this.post.id}}>Switch to Analytics (beta)</LinkTo>
                                 </li>
                             {{/if}}
                             <li>
