Added image corners to feature image
ref https://linear.app/ghost/issue/PROD-1834/qa-rounded-corners-not-applied-to-feature-image

- Added image corners customisation to feature images

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -494,6 +494,12 @@ figure blockquote p {
     line-height: 1.5em;
 }
 
+.feature-image img {
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
+}
+
 .kg-card-figcaption {
     font-size: 13px;
 }
