Added border radius to video previews
ref https://linear.app/ghost/issue/PROD-1831/qa-rounded-corners-dont-apply-to-video-thumbnails

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -812,11 +812,18 @@ a[data-flickr-embed] img {
     background-image: radial-gradient(circle at center, #5b5f66, #1d1f21);
     display: block;
     text-decoration: none !important;
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
 }
 
 .kg-video-preview table {
     background-size: cover;
     min-height: 200px; /* for when images aren't loaded */
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
+    overflow: hidden;
 }
 
 .kg-video-play-button {
