Added rounded corners to gallery email
ref https://linear.app/ghost/issue/PROD-1830/qa-rounded-corners-do-not-apply-to-gallery-card-images

- added rounded image corners to gallery images
- padding prevents the gallery images from applying the rounded
  corners, in which case where needed, we use margin instead.

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -805,6 +805,13 @@ a[data-flickr-embed] img {
     width: 100% !important;
     height: auto !important;
     padding-top: 20px;
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{#if imageCorners}}
+    {{imageCorners}};
+    padding-top: 0 !important;
+    margin-top: 20px !important;
+    {{/if}}
+    {{/hasFeature}}
 }
 
 .kg-video-preview {
