Applied image corner settings to more cards in email newsletters (#23455)
ref
https://linear.app/ghost/issue/PROD-1834/qa-rounded-corners-not-applied-to-feature-image
https://linear.app/ghost/issue/PROD-1833/qa-image-corners-dont-apply-to-embed
https://linear.app/ghost/issue/PROD-1831/qa-rounded-corners-dont-apply-to-video-thumbnails
https://linear.app/ghost/issue/PROD-1832/qa-image-corners-dont-apply-to-product-card
https://linear.app/ghost/issue/PROD-1830/qa-rounded-corners-do-not-apply-to-gallery-card-images

- Updated css styles for email renderer to take rounded corners into account on more images used in emails.

--- a/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/partials/styles.hbs
@@ -494,6 +494,12 @@ figure blockquote p {
     line-height: 1.5em;
 }
 
+.feature-image img {
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
+}
+
 .kg-card-figcaption {
     font-size: 13px;
 }
@@ -799,6 +805,13 @@ a[data-flickr-embed] img {
     width: 100% !important;
     height: auto !important;
     padding-top: 20px;
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{#if imageCorners}}
+    {{imageCorners}};
+    padding-top: 0 !important;
+    margin-top: 20px !important;
+    {{/if}}
+    {{/hasFeature}}
 }
 
 .kg-video-preview {
@@ -806,11 +819,18 @@ a[data-flickr-embed] img {
     background-image: radial-gradient(circle at center, #5b5f66, #1d1f21);
     display: block;
     text-decoration: none !important;
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
 }
 
 .kg-video-preview table {
     background-size: cover;
     min-height: 200px; /* for when images aren't loaded */
+    {{#hasFeature "emailCustomizationAlpha"}}
+    {{imageCorners}};
+    {{/hasFeature}}
+    overflow: hidden;
 }
 
 .kg-video-play-button {
@@ -1485,6 +1505,7 @@ img.kg-cta-image {
     height: auto;
     padding: 0;
     border: none;
+    {{imageCorners}};
 }
 
 .kg-product-title {
