--- a/ghost/core/core/server/services/email-service/email-templates/template.hbs
+++ b/ghost/core/core/server/services/email-service/email-templates/template.hbs
@@ -19,7 +19,7 @@
             <![endif]-->
             <tr>
                 <td>&nbsp;</td>
-                <td class="container">
+                <td class="{{classes.container}}">
                     <div class="content">
                         <!-- START CENTERED WHITE CONTAINER -->
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0" class="main" width="100%">
